src/parser.output
Terminals unused in grammar

   AS
   UPPER
   LOWER
   WORD
   NEWLINE
   CHAR


Grammar

    0 $accept: list_query "end of file"

    1 list_query: query
    2           | query list_query

    3 query: SELECT list_integer FROM FILENAME options SEMICOLON

    4 options: %empty
    5        | DELIMITER DELIMITER_CHARACTER

    6 list_integer: INTEGER
    7             | list_integer COMMA INTEGER


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
SELECT (258) 3
AS (259)
FROM (260) 3
DELIMITER (261) 5
UPPER (262)
LOWER (263)
WORD (264)
FILENAME (265) 3
DELIMITER_CHARACTER (266) 5
NEWLINE (267)
CHAR (268)
INTEGER (269) 6 7
COMMA (270) 7
SEMICOLON (271) 3


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
list_query (18)
    on left: 1 2, on right: 0 2
query (19)
    on left: 3, on right: 1 2
options (20)
    on left: 4 5, on right: 3
list_integer (21)
    on left: 6 7, on right: 3 7


State 0

    0 $accept: . list_query "end of file"

    SELECT  shift, and go to state 1

    list_query  go to state 2
    query       go to state 3


State 1

    3 query: SELECT . list_integer FROM FILENAME options SEMICOLON

    INTEGER  shift, and go to state 4

    list_integer  go to state 5


State 2

    0 $accept: list_query . "end of file"

    "end of file"  shift, and go to state 6


State 3

    1 list_query: query .
    2           | query . list_query

    SELECT  shift, and go to state 1

    $default  reduce using rule 1 (list_query)

    list_query  go to state 7
    query       go to state 3


State 4

    6 list_integer: INTEGER .

    $default  reduce using rule 6 (list_integer)


State 5

    3 query: SELECT list_integer . FROM FILENAME options SEMICOLON
    7 list_integer: list_integer . COMMA INTEGER

    FROM   shift, and go to state 8
    COMMA  shift, and go to state 9


State 6

    0 $accept: list_query "end of file" .

    $default  accept


State 7

    2 list_query: query list_query .

    $default  reduce using rule 2 (list_query)


State 8

    3 query: SELECT list_integer FROM . FILENAME options SEMICOLON

    FILENAME  shift, and go to state 10


State 9

    7 list_integer: list_integer COMMA . INTEGER

    INTEGER  shift, and go to state 11


State 10

    3 query: SELECT list_integer FROM FILENAME . options SEMICOLON

    DELIMITER  shift, and go to state 12

    $default  reduce using rule 4 (options)

    options  go to state 13


State 11

    7 list_integer: list_integer COMMA INTEGER .

    $default  reduce using rule 7 (list_integer)


State 12

    5 options: DELIMITER . DELIMITER_CHARACTER

    DELIMITER_CHARACTER  shift, and go to state 14


State 13

    3 query: SELECT list_integer FROM FILENAME options . SEMICOLON

    SEMICOLON  shift, and go to state 15


State 14

    5 options: DELIMITER DELIMITER_CHARACTER .

    $default  reduce using rule 5 (options)


State 15

    3 query: SELECT list_integer FROM FILENAME options SEMICOLON .

    $default  reduce using rule 3 (query)
